implemented GraphUtil